2009-03-09  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/temporal.hh, temporal.cc
	(TemporalNegotiator::distributeParameters): New function.

	* collector.cc: Collector shouldn't make assumptions and compute a
	"better" maxBlockSize-value for the buffers.  Instead use
	allowedBuffered as given when configured.

	* connector.cc: Configure compute the actual needed buffer size
	here instead.

	* music/clock.hh, clock.cc (Clock::setClockTicks): New function.

	* BIFO.cc (BFIO::trimBlock): More informative overflow message.

2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* synchronizer.cc, port.cc, music/temporal.hh: Decrement
	maxBuffered at the proper place.  (This fixes a bug where the loop
	algorithm worked on different parameters than the timing schedule
	algorithm.)

	* music/debug.hh (MUSIC_LOGBR): New debug macro.

	* synchronizer.cc: Inserted some debugging statements.

	* port.cc (OutputRedistributionPort::setupCleanup,
	InputRedistributionPort::setupCleanup):  Delete spatialNegotiator
	at end of setup phase.

	* music/connector.hh, connector.cc, runtime.cc: Resolve a memory
	allocation problem so that we leak less memory.

	* port.cc (ContInputPort::mapImpl): Don't call assertInput ()
	here.

	* music/error.hh, music/port.hh, music/runtime.hh, music/setup.hh,
	error.cc, port.cc, runtime.cc, setup.cc (Setup::Setup,
	Runtime::Runtime, Port::map): Added error messages when trying to
	call repeatedly.

2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.1

	* music/connector.hh, music/port.hh, music/spatial.hh,
	music/subconnector.hh, music/temporal.hh, configuration.cc,
	connector.cc, port.cc, spatial.cc, subconnector.cc, temporal.cc:
	Pass MPI::Datatype to ContSubconnectors; Some code cleanups.

2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/synchronizer.hh, synchronizer.cc, connector.cc: Removed
	some old cruft in timing logic.

	* sampler.cc: #include <cstring>

	* setup.cc (Setup::publishMessageInput,